# cuECC

./: .gitignore  Makefile  README.md  pyproject.toml
benchmark/: adapter.py  compare.py  settings.py  utils.py
benchmark/reference/: curve.py  ecc.py
benchmark/subjects/: public_key.py
src/: config.h  ecc.cu  ecc.cuh
src/bindings/: ecc.py  hooks.py  utils.py
src/curve/: fp.cuh  point.cuh  secp256k1.cuh
src/uint/: u256.cuh  u64.cuh
